--- a/index.html
+++ b/index.html
@@ -4,16 +4,35 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Laboratoire 8</title>
+    <link rel="stylesheet" href="./css/reset.css">
+    <link rel="stylesheet" href="./css/styles.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 </head>
 <body>
     <header>
+        <div class="logo">
+            <span>College la cite <span class="point">.</span></span>
+        </div>
+        <nav>
+            <ul>
+                <li><a href="index.html"> Home <span></span></a></li>
+                <li><a href="#About"> About <span></span></a></li>
+                <li><a href="#"> Galerie </a><span></span></li>
+                <li><a href="#Contact"> Contact <span></span></a></li>
+            </ul>
+        </nav>
 
     </header>
     <main>
-
+        <div class="presentation">
+            <P>Presentation</P>
+        </div>
+        <div class="affiches">
+            <p>Affiches</p>
+        </div>
     </main>
     <footer>
-        
+        <span>&copy; Franck kougnang</span>
     </footer>
 </body>
 </html>
