--- a/index.html
+++ b/index.html
@@ -6,33 +6,63 @@
     <title>Laboratoire 8</title>
     <link rel="stylesheet" href="./css/reset.css">
     <link rel="stylesheet" href="./css/styles.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+    <script src="https://kit.fontawesome.com/57f747ccdf.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <header>
-        <div class="logo">
-            <span>College la cite <span class="point">.</span></span>
-        </div>
         <nav>
-            <ul>
-                <li><a href="index.html"> Home <span></span></a></li>
-                <li><a href="#About"> About <span></span></a></li>
-                <li><a href="#"> Galerie </a><span></span></li>
-                <li><a href="#Contact"> Contact <span></span></a></li>
+            <div class="logo">
+                <a href="">College <span>la cite</span></a>
+            </div>
+            <ul class="navigation-bar">
+                <li >   
+                    <a href="index.html" class="active">
+                        <span class="active-up"></span>
+                        <span class="icon"><i class="fa-solid fa-house"></i></span>
+                        <span class="text">Home</span>
+                        <span class="active-down"></span>
+                    </a>
+                </li>
+                <li>
+                    <a href="index.html">
+                        <span class="active-up"></span>
+                        <span class="icon"><i class="fa-solid fa-image"></i></span>
+                        <span class="text">Gallery</span>
+                        <span class="active-down"></span>
+                    </a>
+                </li>
+                <li>
+                    <a href="index.html">
+                        <span class="active-up"></span>
+                        <span class="icon"><i class="fa-solid fa-cart-shopping fa-beat"></i></span>
+                        <span class="text">Ticket</span>
+                        <span class="active-down"></span>
+                    </a>
+                </li>
+                <li>
+                    <a href="index.html">
+                        <span class="active-up"></span>
+                        <span class="icon"><i class="fa-solid fa-address-book"></i></span>
+                        <span class="text">Contact</span>
+                        <span class="active-down"></span>
+                    </a>
+                </li>
+                
             </ul>
         </nav>
-
     </header>
     <main>
-        <div class="presentation">
-            <P>Presentation</P>
+        <div class="description">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem ab, earum rerum doloribus rem aliquam voluptatem, repellat nam eaque officia atque maiores blanditiis corrupti explicabo. Odio optio sunt ratione voluptas?
         </div>
-        <div class="affiches">
-            <p>Affiches</p>
+        <div class="picture">
+           <div class="cercle"></div>
+           <div><img src="./img/image1.jpg" alt="Image"></div>
         </div>
     </main>
     <footer>
-        <span>&copy; Franck kougnang</span>
+        <p>&copy;Kouagnang Franck & Sotodonu Otniel</p>
+        <p>&copy;2023 College la cite</p>
     </footer>
 </body>
 </html>
