--- a/index.html
+++ b/index.html
@@ -274,6 +274,7 @@
              </div>
               <!--===== contact item end =====-->
            </div>
+           
               <!--===== Contact Form =====-->
            <div class="row">
                <div class="contact-form">
@@ -313,7 +314,7 @@
     
     <footer>
         <div class="container">
-                <p class="copyright-text1">&copy; 2021 by Kouagnang Franck & Otnile christin</p>
+                <p class="copyright-text1">&copy; 2021 by Kouagnang Franck & Otniel christin</p>
                 <p class="copyright-text2">&copy; 2023College la cite</p>
         </div>
     </footer>
