--- a/index.html
+++ b/index.html
@@ -232,81 +232,65 @@
 
         <section id="Contact-section">
              <!--===== Contact Section Start =====-->
-       <section class="contact-section section-padding" id="contact">
-        <div class="container">
-         <div class="row">
-             <div class="section-title text-align">
-                 <h5 class="sub-title">contact</h5>
-                 <h3 class="main-title">get in touch</h3>
-                 <ul class="line">
-                     <li></li>
-                     <li></li>
-                     <li></li>
-                 </ul>
-             </div> <!--===== Section Title =====-->
-           </div>
-           <div class="row">
-               <!--===== contact item start =====-->
-               <div class="contact-item">
-                   <div class="contact-item-inner">
-                       <i class="fas fa-phone"></i>
-                       <span>Phone</span>
-                       <p>03498309488</p>
-                   </div>
-               </div>
-               <!--===== contact item end =====-->
-               <!--===== contact item start =====-->
+       <section id="contact-section">
+            <div class="form-container">
+                <div class="Titres">
+                    <h2>Contact</h2>
+                    <h3 class="main-title">To join us</h3>
+                    <ul class="line">
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                    </ul>
+                </div> 
                 <div class="contact-item">
-                 <div class="contact-item-inner">
-                     <i class="fas fa-envelope"></i>
-                     <span>Email</span>
-                     <p>codercryptical@gmail.com</p>
-                 </div>
-             </div>
-              <!--===== contact item end =====-->
-              <!--===== contact item start =====-->
-              <div class="contact-item">
-                 <div class="contact-item-inner">
-                     <i class="fas fa-map-marker-alt"></i>
-                     <span>Address</span>
-                     <p>Rawalpindi</p>
-                 </div>
-             </div>
-              <!--===== contact item end =====-->
-           </div>
+                    <a href="#" class="contact-item-inner">
+                    <i class="fa-sharp fa-solid fa-phone"></i>
+                        <span>Phone</span>
+                        <p>1-(XXX)-XXXX</p>
+                    <a>
+                </div>
+                <div class="contact-item">
+                    <a href="#" class="contact-item-inner">
+                        <i class="fas fa-envelope"></i>
+                        <span>Email</span>
+                        <p>JohnDoe@CollegeLacite.ca</p>
+                    </a>
+                </div>
+                <div class="contact-item">
+                    <a href="#" class="contact-item-inner">
+                        <i class="fa-solid fa-map-location-dot fa-bounce"></i>
+                        <span>Address</span>
+                        <p>501 Pkwy Aviation, Ottawa</p>
+                    </a>
+                </div>
+            </div>
+            </div>
            
-              <!--===== Contact Form =====-->
-           <div class="row">
-               <div class="contact-form">
-                   <form action="">
-                       <div class="row">
-                           <div class="w-50">
-                               <div class="input-group">
-                                   <input type="text" placeholder="Name" class="input-control">
-                               </div>
-                               <div class="input-group">
-                                 <input type="email" placeholder="Email" class="input-control">
-                             </div>
-                             <div class="input-group">
-                                 <input type="text" placeholder="Subject" class="input-control">
-                             </div>
-                           </div>
-                           <div class="w-50">
-                               <div class="input-group">
-                                   <textarea name="" class="input-control" placeholder="Message" id="" cols="30" rows="10"></textarea>
-                               </div>
-                           </div>
-                       </div>
-                       <div class="row">
-                           <div class="submit-btn">
-                               <button type="submit" class="btn-1">Send Message</button>
-                           </div>
-                       </div>
-                   </form>
-               </div>
-           </div>
-        </div>
-    </section>
+            <div class="form-container">      
+                <form action="" class="contact-form">
+                        <div class="form-group1">
+                            <div class="input-form">
+                                <input type="text" placeholder="Name" class="input-control">
+                            </div>
+                            <div class="input-form">
+                                <input type="email" placeholder="Email" class="input-control">
+                            </div>
+                            <div class="input-form">
+                                <input type="text" placeholder="Subject" class="input-control">
+                            </div>
+                        </div>
+                        <div class="form-group2">
+                            <div class="input-form">
+                                <textarea name="" class="input-control" placeholder="Message" id="" cols="30" rows="10"></textarea>
+                            </div>
+                        </div>
+                        <div class="submit-form">
+                            <button type="submit" class="contact-button">Send Message</button>
+                        </div>
+                </form>
+            </div>
+        </section>
     </main>
 
 
