--- a/index.html
+++ b/index.html
@@ -358,7 +358,7 @@
                             <!--XXXXXXXXXXXXXXXX Footer XXXXXXXXXXXXX-->
     <footer>
         <div class="container">
-                <p class="copyright-text1">&copy; 2023 by Kouagnang Franck & Otniel christin</p>
+                <p class="copyright-text1">&copy; 2023 by JohnDoe & JohnDoe</p>
                 <p class="copyright-text2">&copy; 2023College la cite</p>
         </div>
     </footer>
